# URLInspector

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  cli.py  config.yaml  database.py  main.py  queries.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  url_sentry.py
.github/workflows/: pytest.yml
cli/: cli.py  database.py  queries.py  url_sentry.py  urlinspector.py
src/inspector/: cli.py  config.py  database.py  db.py  discord_client.py  main.py  models.py  queries.py  urlinspector.py
tests/: test_urlinspector.py
