[metadata]
name = url_inspecor
description = A tool to monitor websites
long_description = file: README.md
long_description_content_type = text/markdown
author = H3llf!r3
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: only
    Programming Language :: Python :: 3 :: Only
platform = linux

[options]
packages =
    inspecor
install_requires =
    beautifulsoup4==4.12.2
    python-crontab==3.0.0
    python-dotenv==1.0.0
    requests==2.31.0
    tldextract==3.6.0
    validators==0.22.0
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[flake8]
ignore = E203, E501, W503
