[metadata]
name = inspector
description = A tool to monitor websites
long_description = file: README.md
long_description_content_type = text/markdown
author = H3llf!r3
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: only
    Programming Language :: Python :: 3 :: Only
platform = linux

[options]
packages = find:
install_requires =
    alembic>=1.12.0
    beautifulsoup4>=4.12.2
    python-crontab>=3.0.0
    requests>=2.31.0
    rich>=13.5.3
    tldextract>=3.6.0
    tqdm>=4.66.1
    validators>=0.22.0
python_requires = >=3.8
zip_safe = no

[flake8]
ignore = E203, E501, W503
